--- a/linux_os/guide/system/accounts/accounts-physical/screen_locking/smart_card_login/smartcard_pam_enabled/ansible/shared.yml
+++ b/linux_os/guide/system/accounts/accounts-physical/screen_locking/smart_card_login/smartcard_pam_enabled/ansible/shared.yml
@@ -4,50 +4,40 @@
 # complexity = low
 # disruption = low
 
+{{%- if 'sle' in product %}}
+  {{%- set pam_package = "pam_pkcs11" %}}
+{{%- else %}}
+  {{%- set pam_package = "libpam-pkcs11" %}}
+{{% endif %}}
+
+{{%- if 'sle' in product %}}
+  {{%- set pam_pkcs11_control_flag = "sufficient" %}}
+{{%- else %}}
+  {{%- set pam_pkcs11_control_flag = "\u005Bsuccess=2 default=ignore\u005D" %}}
+{{% endif %}}
+
 - name: "Gather list of packages"
   package_facts:
     manager: auto
-
-- name: Set pam package based on OS
-  set_fact:
-    {{% if 'ubuntu' in product %}}
-    pam_package: libpam-pkcs11
-    {{% else %}}
-    pam_package: pam_pkcs11
-    {{% endif %}}
 
 - name: Check to see if 'pam_pkcs11' module is configured in '/etc/pam.d/common-auth'
   shell: grep -E '^\s*auth\s+\S+\s+pam_pkcs11\.so' /etc/pam.d/common-auth || true
   register: check_pam_pkcs11_module_result
   changed_when: false
-  when: 'pam_package in ansible_facts.packages'
+  when: '"{{{ pam_package }}}" in ansible_facts.packages'
 
 - name: Configure 'pam_pkcs11' module in '/etc/pam.d/common-auth'
   lineinfile:
     path: /etc/pam.d/common-auth
-    {{% if 'ubuntu' in product %}}
-    line: 'auth    [success=2 default=ignore] pam_pkcs11.so'
-    {{% else %}}
-    line: 'auth sufficient pam_pkcs11.so'
-    {{% endif %}}
+    line: 'auth {{{ pam_pkcs11_control_flag }}} pam_pkcs11.so'
     insertafter: '^\s*#'
     state: present
-  when: 'pam_package in ansible_facts.packages'
+  when: '"{{{ pam_package }}}" in ansible_facts.packages'
 
-{{% if 'ubuntu' in product %}}
-- name: Ensure 'pam_pkcs11' module has '[success=2 default=ignore]' control flag
+- name: Ensure 'pam_pkcs11' module has {{{ pam_pkcs11_control_flag }}} control flag
   lineinfile:
     path: /etc/pam.d/common-auth
     regexp: '^(\s*auth\s+)\S+(\s+pam_pkcs11\.so.*)'
-    line: '\g<1>[success=2 default=ignore]\g<2>'
+    line: '\g<1>{{{ pam_pkcs11_control_flag }}}\g<2>'
     backrefs: yes
-  when: 'pam_package in ansible_facts.packages'
-{{% else %}}
-- name: Ensure 'pam_pkcs11' module has 'sufficient' control flag
-  lineinfile:
-    path: /etc/pam.d/common-auth
-    regexp: '^(\s*auth\s+)\S+(\s+pam_pkcs11\.so.*)'
-    line: '\g<1>sufficient\g<2>'
-    backrefs: yes
-  when: 'pam_package in ansible_facts.packages'
-{{% endif %}}
+  when: '"{{{ pam_package }}}" in ansible_facts.packages'
