Fix path and add ansible remediation UBTU-20-010298
This commit will fix path from /sbin/fdisk to /usr/sbin/fdisk, and will add ansible remediations for ubuntu2004

--- a/linux_os/guide/system/auditing/auditd_configure_rules/audit_privileged_commands/audit_rules_privileged_commands_fdisk/rule.yml
+++ b/linux_os/guide/system/auditing/auditd_configure_rules/audit_privileged_commands/audit_rules_privileged_commands_fdisk/rule.yml
@@ -30,7 +30,11 @@ ocil: |-
     following command:
 
     <pre>$ sudo auditctl -l | grep fdisk
+    {{% if product in ['ubuntu2004'] %}}
+    -w /usr/sbin/fdisk -p x -k fdisk
+    {{% else %}}
     -w /sbin/fdisk -p x -k fdisk </pre>
+    {{% endif %}}
 
     If the command does not return a line, or the line is commented out, this
     is a finding.
