Add proper utmp path for UBTU-20-010278
This commit will add in proper utmp path: /var/run/utmp for UBTU-20-010278

--- a/linux_os/guide/system/auditing/auditd_configure_rules/audit_rules_session_events_utmp/ansible/shared.yml
+++ b/linux_os/guide/system/auditing/auditd_configure_rules/audit_rules_session_events_utmp/ansible/shared.yml
@@ -4,5 +4,11 @@
 # complexity = low
 # disruption = low
 
-{{{ ansible_audit_augenrules_add_watch_rule(path='/run/utmp', permissions='wa', key='session') }}}
-{{{ ansible_audit_auditctl_add_watch_rule(path='/run/utmp', permissions='wa', key='session') }}}
+{{%- if product in ['ubuntu2004'] %}}
+  {{%- set utmp_path = "/var/run/utmp" %}}
+{{%- else %}}
+  {{%- set utmp_path = "/run/utmp" %}}
+{{% endif %}}
+
+{{{ ansible_audit_augenrules_add_watch_rule(path=utmp_path, permissions='wa', key='session') }}}
+{{{ ansible_audit_auditctl_add_watch_rule(path=utmp_path, permissions='wa', key='session') }}}
