--- a/linux_os/guide/system/accounts/accounts-pam/locking_out_password_attempts/accounts_password_pam_unix_remember/ansible/shared.yml
+++ b/linux_os/guide/system/accounts/accounts-pam/locking_out_password_attempts/accounts_password_pam_unix_remember/ansible/shared.yml
@@ -12,6 +12,8 @@
 
 {{{ ansible_instantiate_variables("var_password_pam_unix_remember") }}}
 
+{{% if product not in ['ubuntu2004'] %}}
+
 {{{ ansible_pam_pwhistory_enable(accounts_password_pam_unix_remember_file,
                                  'requisite',
                                  '^password.*requisite.*pam_pwquality\.so') }}}
@@ -19,3 +21,11 @@
 {{{ ansible_pam_pwhistory_parameter_value(accounts_password_pam_unix_remember_file,
                                           'remember',
                                           '{{ var_password_pam_unix_remember }}') }}}
+
+{{% else %}}
+{{{ ansible_ensure_pam_module_line(accounts_password_pam_unix_remember_file,
+                                          "password",
+                                          "[success=1 default=ignore]",
+                                          "pam_unix.so obscure sha512 shadow remember=5 rounds=5000")}}}
+
+{{% endif %}}
