--- a/linux_os/guide/system/accounts/accounts-pam/locking_out_password_attempts/accounts_password_pam_unix_remember/ansible/shared.yml
+++ b/linux_os/guide/system/accounts/accounts-pam/locking_out_password_attempts/accounts_password_pam_unix_remember/ansible/shared.yml
@@ -1,4 +1,4 @@
-# platform = multi_platform_rhel,multi_platform_fedora,multi_platform_ol,multi_platform_rhv,multi_platform_sle
+# platform = multi_platform_rhel,multi_platform_fedora,multi_platform_ol,multi_platform_rhv,multi_platform_sle,multi_platform_ubuntu
 # reboot = false
 # strategy = configure
 # complexity = low
@@ -12,8 +12,12 @@
 
 {{{ ansible_instantiate_variables("var_password_pam_unix_remember") }}}
 
-{{% if product not in ['ubuntu2004'] %}}
-
+{{% if product in ['ubuntu2004'] %}}
+{{{ ansible_ensure_pam_module_line(accounts_password_pam_unix_remember_file,
+                                          "password",
+                                          "[success=1 default=ignore]",
+                                          "pam_unix.so obscure sha512 shadow remember=5 rounds=5000")}}}
+{{% else %}}
 {{{ ansible_pam_pwhistory_enable(accounts_password_pam_unix_remember_file,
                                  'requisite',
                                  '^password.*requisite.*pam_pwquality\.so') }}}
@@ -21,11 +25,5 @@
 {{{ ansible_pam_pwhistory_parameter_value(accounts_password_pam_unix_remember_file,
                                           'remember',
                                           '{{ var_password_pam_unix_remember }}') }}}
-
-{{% else %}}
-{{{ ansible_ensure_pam_module_line(accounts_password_pam_unix_remember_file,
-                                          "password",
-                                          "[success=1 default=ignore]",
-                                          "pam_unix.so obscure sha512 shadow remember=5 rounds=5000")}}}
 
 {{% endif %}}
