Copy files before remediating if they are symlinks.
Crypto policies sometimes use symlinks and when we edit them, they might
get reverted if they are not copied first because they belong to
crypto-policies package and the source is not considered configuration
files.

--- a/linux_os/guide/system/software/integrity/crypto/configure_gnutls_tls_crypto_policy/ansible/shared.yml
+++ b/linux_os/guide/system/software/integrity/crypto/configure_gnutls_tls_crypto_policy/ansible/shared.yml
@@ -12,8 +12,13 @@
 - name: "{{{ rule_title }}}: stat"
   stat:
     path: "{{ path }}"
-    follow: yes
   register: gnutls_file
+
+- name: "{{{ rule_title }}}: Copy file if symlink"
+  ansible.builtin.copy:
+    src: "{{ gnutls_file.stat.lnk_source }}"
+    dest: "{{ path }}"
+  when: gnutls_file.stat.islnk is defined and gnutls_file.stat.islnk
 
 - name: "{{{ rule_title }}}: Add"
   lineinfile:
