Fix #11130 -- respect package name for NetworkManager in Ubuntu plays

--- a/linux_os/guide/system/network/network-wireless/wireless_software/wireless_disable_interfaces/ansible/shared.yml
+++ b/linux_os/guide/system/network/network-wireless/wireless_software/wireless_disable_interfaces/ansible/shared.yml
@@ -9,7 +9,8 @@
     name: "{{ item }}"
     state: present
   with_items:
-    - NetworkManager
+    #- NetworkManager
+    - "{{{ platform_package_overrides.NetworkManager }}}"
 
 - name: Deactivate Wireless Network Interfaces
   command: nmcli radio wifi off
