--- a/linux_os/guide/services/ssh/ssh_server/firewalld_sshd_port_enabled/ansible/shared.yml
+++ b/linux_os/guide/services/ssh/ssh_server/firewalld_sshd_port_enabled/ansible/shared.yml
@@ -22,17 +22,16 @@
   block:
     - name: '{{{ rule_title }}} - Collect NetworkManager connections names'
       ansible.builtin.shell:
-        cmd:
-          set -o pipefail
-          nmcli -f UUID,TYPE con | grep ethernet | awk '{ print $1 }'
+        cmd: |-
+          set -o pipefail && nmcli -f UUID,TYPE con | grep ethernet | awk '{ print $1 }'
       register: result_nmcli_cmd_connections_names
       changed_when: false
 
     - name: '{{{ rule_title }}} - Collect NetworkManager connections zones'
       ansible.builtin.shell:
-        cmd:
+        cmd: |-
           set -o pipefail
-          nmcli -f connection.zone connection show {{ item | trim }} | awk '{ print $2}'
+          set -o pipefail && nmcli -f connection.zone connection show {{ item | trim }} | awk '{ print $2}'
       register: result_nmcli_cmd_connections_zones
       changed_when: false
       with_items:
@@ -40,7 +39,7 @@
 
     - name: '{{{ rule_title }}} - Ensure NetworkManager connections are assigned to a firewalld zone'
       ansible.builtin.command:
-        cmd:
+        cmd: |-
           set -o pipefail
           nmcli connection modify {{ item.0 }} connection.zone {{ firewalld_sshd_zone }}
       register: result_nmcli_cmd_connections_assignment
@@ -59,7 +58,7 @@
 
     - name: '{{{ rule_title }}} - Collect firewalld active zones'
       ansible.builtin.shell:
-        cmd:
+        cmd: |-
           set -o pipefail
           firewall-cmd --get-active-zones | grep -v interfaces
       register: result_firewall_cmd_zones_names
@@ -67,7 +66,7 @@
 
     - name: '{{{ rule_title }}} - Ensure firewalld zones allow SSH'
       ansible.builtin.command:
-        cmd:
+        cmd: |-
           set -o pipefail
           firewall-cmd --permanent --zone={{ item }} --add-service=ssh
       register: result_nmcli_cmd_connections_assignment
