Update Ansible lint config

--- a/.config/ansible-lint.yml
+++ b/.config/ansible-lint.yml
@@ -20,3 +20,4 @@ warn_list:
     - name[casing]  # Rule for checking task and play names.
     - no-handler # Style choice, skipping for now
     - risky-shell-pipe # Skipping for now due to authselect rules
+    - no-handler
