Update k8s action to build image on new PR
This triggers action to run on every new PR created

--- a/.github/workflows/k8s-content.yaml
+++ b/.github/workflows/k8s-content.yaml
@@ -4,6 +4,11 @@ name: Kubernetes content
 on:
   push:
     branches: [ 'master' ]
+  pull_request:
+    types:
+    - opened
+    - reopened
+    - synchronize
 
 jobs:
   container-main:
