--- a/tests/data/product_stability/firefox.yml
+++ b/tests/data/product_stability/firefox.yml
@@ -22,6 +22,7 @@ groups: {}
 grub2_boot_path: /boot/grub2
 grub2_uefi_boot_path: /boot/grub2
 grub_helper_executable: grubby
+journald_conf_dir_path: /etc/systemd/journald.conf.d
 nobody_gid: 65534
 nobody_uid: 65534
 platform_package_overrides:
