--- a/tests/data/product_stability/ubuntu1804.yml
+++ b/tests/data/product_stability/ubuntu1804.yml
@@ -26,6 +26,7 @@ grub2_boot_path: /boot/grub
 grub2_uefi_boot_path: /boot/efi/EFI/ubuntu
 grub_helper_executable: update-grub
 init_system: systemd
+journald_conf_dir_path: /etc/systemd/journald.conf.d
 major_version_ordinal: 1804
 nobody_gid: 65534
 nobody_uid: 65534
