--- a/tests/data/product_stability/ubuntu2004.yml
+++ b/tests/data/product_stability/ubuntu2004.yml
@@ -27,6 +27,7 @@ grub2_boot_path: /boot/grub
 grub2_uefi_boot_path: /boot/grub
 grub_helper_executable: update-grub
 init_system: systemd
+journald_conf_dir_path: /etc/systemd/journald.conf.d
 major_version_ordinal: 2004
 nobody_gid: 65534
 nobody_uid: 65534
