--- a/controls/cis_rhel7.yml
+++ b/controls/cis_rhel7.yml
@@ -645,12 +645,15 @@ controls:
     - service_dhcpd_disabled
 
   - id: 2.2.4
-    title: Ensure CUPS is not installed (Automated)
+    title: Ensure dns server services are not in use (Automated)
     levels:
     - l1_server
+    - l1_workstation
     status: automated
     rules:
-      - package_cups_removed
+    - package_bind_removed
+    related_rules:
+    - service_named_disabled
 
   - id: 2.2.6
     title: Ensure LDAP server is not installed (Automated)
@@ -660,15 +663,6 @@ controls:
     status: automated
     rules:
     - package_openldap-servers_removed
-
-  - id: 2.2.7
-    title: Ensure DNS Server is not installed (Automated)
-    levels:
-    - l1_server
-    - l1_workstation
-    status: automated
-    rules:
-    - package_bind_removed
 
   - id: 2.2.8
     title: Ensure FTP Server is not installed (Automated)
