--- a/controls/cis_rhel7.yml
+++ b/controls/cis_rhel7.yml
@@ -655,6 +655,15 @@ controls:
     related_rules:
     - service_named_disabled
 
+  - id: 2.2.5
+    title: Ensure dnsmasq services are not in use (Automated)
+    levels:
+    - l1_server
+    - l1_workstation
+    status: automated
+    rules:
+    - package_dnsmasq_removed
+
   - id: 2.2.6
     title: Ensure LDAP server is not installed (Automated)
     levels:
