--- a/controls/cis_rhel7.yml
+++ b/controls/cis_rhel7.yml
@@ -593,12 +593,15 @@ controls:
     rules:
     - package_chrony_installed
 
-  - id: 2.2.1.1
-    title: Ensure time synchronization is in use (Manual)
+  - id: 2.2.1
+    title: Ensure autofs services are not in use (Automated)
     levels:
     - l1_server
-    - l1_workstation
-    status: manual
+    - l2_workstation
+    status: partial
+    # we need package_autofs_removed to complete this control
+    rules:
+    - service_autofs_disabled
 
   - id: 2.1.2
     title: Ensure chrony is configured (Automated)
